crates/uitest/fixtures/ty_check/let_projection_missing_bound.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/let_projection_missing_bound.fe
---
error[6-0003]: trait bound is not satisfied
   ┌─ let_projection_missing_bound.fe:10:33
   │
10 │     let _: <T as Bound>::Item = todo()
   │                                 ^^^^^^ `T` doesn't implement `Bound`
